[gd_scene load_steps=10 format=3 uid="uid://ddy9u8v7p1k2r"]

[ext_resource type="Script" path="res://scripts/daily_challenge.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.956863, 0.968627, 0.964706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(1, 1, 1, 1)
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color(0, 0, 0, 0.04)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aura_card"]
bg_color = Color(1, 1, 1, 1)
corner_radius_all = 60
shadow_color = Color(0, 0, 0, 0.03)
shadow_size = 20
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_day_today"]
bg_color = Color(0.152941, 0.682353, 0.376471, 1)
corner_radius_all = 100
shadow_color = Color(0.15, 0.68, 0.37, 0.3)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_primary"]
bg_color = Color(0.152941, 0.682353, 0.376471, 1)
corner_radius_all = 100
shadow_color = Color(0.15, 0.68, 0.37, 0.4)
shadow_size = 25
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
bg_color = Color(0.113725, 0.52549, 0.286275, 1)
corner_radius_all = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_disabled"]
bg_color = Color(0.9, 0.93, 0.91, 1)
corner_radius_all = 100

[node name="DailyChallenge" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBox" type="VBoxContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 60

[node name="Header" type="Panel" parent="Scroll/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="VBox" type="VBoxContainer" parent="Scroll/VBox/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Scroll/VBox/Header/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17, 0.24, 0.31, 1)
theme_override_font_sizes/font_size = 56
text = "DAILY LAB"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Scroll/VBox/Header/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.152941, 0.682353, 0.376471, 1)
theme_override_font_sizes/font_size = 20
text = "â€¢ EVOLVE YOUR MIND â€¢"
horizontal_alignment = 1

[node name="CalendarContainer" type="MarginContainer" parent="Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="Card" type="PanelContainer" parent="Scroll/VBox/CalendarContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aura_card")

[node name="VBox" type="VBoxContainer" parent="Scroll/VBox/CalendarContainer/Card"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35
theme_override_constants/separation = 25

[node name="MonthHBox" type="HBoxContainer" parent="Scroll/VBox/CalendarContainer/Card/VBox"]
layout_mode = 2

[node name="MonthLabel" type="Label" parent="Scroll/VBox/CalendarContainer/Card/VBox/MonthHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.17, 0.24, 0.31, 1)
theme_override_font_sizes/font_size = 28
text = "JANUARY 2026"

[node name="StreakLabel" type="Label" parent="Scroll/VBox/CalendarContainer/Card/VBox/MonthHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.68, 0.37, 1)
theme_override_font_sizes/font_size = 22
text = "ðŸ”¥ 7 STREAK"

[node name="Grid" type="GridContainer" parent="Scroll/VBox/CalendarContainer/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 7

[node name="SelectedPuzzleContainer" type="MarginContainer" parent="Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 140

[node name="Card" type="PanelContainer" parent="Scroll/VBox/SelectedPuzzleContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aura_card")

[node name="VBox" type="VBoxContainer" parent="Scroll/VBox/SelectedPuzzleContainer/Card"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40
theme_override_constants/separation = 30

[node name="TaskDate" type="Label" parent="Scroll/VBox/SelectedPuzzleContainer/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.65, 1)
theme_override_font_sizes/font_size = 20
text = "JANUARY 5, 2026"
horizontal_alignment = 1

[node name="TaskTitle" type="Label" parent="Scroll/VBox/SelectedPuzzleContainer/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.17, 0.24, 0.31, 1)
theme_override_font_sizes/font_size = 36
text = "TODAY'S TASK"
horizontal_alignment = 1

[node name="TaskDesc" type="Label" parent="Scroll/VBox/SelectedPuzzleContainer/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.6, 0.58, 1)
theme_override_font_sizes/font_size = 22
text = "Complete the capture challenge to earn your daily stars."
horizontal_alignment = 1
autowrap_mode = 2

[node name="SolveButton" type="Button" parent="Scroll/VBox/SelectedPuzzleContainer/Card/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 90)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
text = "START PUZZLE"
